--- a/rdv.html
+++ b/rdv.html
@@ -1,64 +1,51 @@
-<!DOCTYPE html>
 <html>
-<head>
-  <title>Home Page</title>
-  <style>
-    header {
-      display: flex;
-      justify-content: space-between;
-      position: relative;
-      z-index: -1;
-    }
+  <head>
+    <title>Home</title>
+  </head>
 
-    nav ul {
-      display: flex;
-      list-style: none;
-      margin: 0;
-      padding: 0;
-    }
+  <header>
+    <nav>
+      <ul>
+        <li><a href="#home">Home</a></li>
+        <li><a href="#articles_services">Articles & Services</a></li>
+        <li><a href="#rdv">Rdv</a></li>
+        <li><a href="#inscription">Inscription</a></li>
+      </ul>
+    </nav>
+    <hr>
+        
+    <img src="img0.jpg" alt="Image description" height="300" width="1000">
+  </header>
 
-    nav li {
-      margin: 0 10px;
-    }
-  </style>
-</head>
-<body>
-    <header>
-      <nav>
-        <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">Articles & Services</a></li>
-          <li><a href="#">Rdv</a></li>
-          <li><a href="#">Inscription</a></li>
-        </ul>
-      </nav>
-    </header>
-  
+  <body>
     <main>
+      <h2>Formulaire de rendez-vous: </h2>
       <form action="#">
-        <label for="nom">Nom *:</label>
-        <input type="text" id="nom" name="nom" placeholder="Votre nom" required>
+        <label for="nom">Nom *:</label><br>
+        <input type="text" id="nom" name="nom" placeholder="Votre nom" required><br><br>
   
-        <label for="prenom">Prénom:</label>
-        <input type="text" id="prenom" name="prenom" placeholder="Votre prénom">
+        <label for="prenom">Prénom:</label><br>
+        <input type="text" id="prenom" name="prenom" placeholder="Votre prénom"><br><br>
   
-        <label for="raison">Raison du rendez-vous *:</label>
-        <input type="text" id="raison" name="raison" required>
+        <label for="raison">Raison du rendez-vous *:</label><br>
+        <input type="text" id="raison" name="raison" required><br><br>
   
-        <label for="heure">Heure de rendez-vous *:</label>
-        <input type="time" id="heure" name="heure" min="09:00" max="18:00" required>
+        <label for="heure">Heure *:</label><br>
+        <input type="time" id="heure" name="heure" min="09:00" max="18:00" required><br><br>
   
-        <label for="date">Date de rendez-vous *:</label>
-        <input type="date" id="date" name="date" min="2023-01-25" max="2023-03-25" value="2023-01-25" required>
+        <label for="date">Date *:</label><br>
+        <input type="date" id="date" name="date" min="2023-01-25" max="2023-03-25" value="2023-01-25" required><br><br>
   
         <input type="submit" value="Soumettre">
       </form>
     </main>
-  
+
+    <br><br>
+    <hr>
     <footer>
-      <p>Contactez-nous à <a href="mailto:info@example.com">info@example.com</a></p>
-      <p>Adresse: 123 Main Street, Anytown USA</p>
+      <p><strong>Contact us</strong></p>
+      <p>Email: <a href="elmoez.chteoui@esprit.tn">elmoez.chteoui@esprit.tn</a></p>
+      <p>Gamarth</p>
     </footer>
   </body>
-  
 </html>
